--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^5.1.0",
     "pg": "^8.16.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
